--- a/web/bundles/zectranet/css/resetPassword.css
+++ b/web/bundles/zectranet/css/resetPassword.css
@@ -1,6 +1,6 @@
 .classForm{
     width: 60%;
-    margin: 50px auto;
+    margin: 90px auto 0;
     border: 1px solid rgb(221, 221, 221);
     box-shadow: 4px 4px 1px #eee;
     border-radius: 3px;
@@ -42,4 +42,16 @@
     line-height: 40px;
     color: #209900;
     font-size: 14px;
+}
+
+/*=======Media query=====*/
+
+@media screen and (max-width: 1000px){
+    .classForm{
+        width: 100%;
+    }
+
+    .containerForContent .form-group input{
+        width: 90%;
+    }
 }
