--- a/src/ZectranetBundle/Resources/views/settings.html.twig
+++ b/src/ZectranetBundle/Resources/views/settings.html.twig
@@ -38,7 +38,7 @@
                 <div class="col-xs-2"></div>
                 <div class="col-xs-10">
                     <div class="form-group">
-                        <input type="checkbox" name="showClosedProjects" {% if (app.user.userSettings.showClosedProjects) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="showClosedProjects" {% if (app.user.userSettings.showClosedProjects) %}checked{% endif %}>
                         Show closed projects
                     </div>
 
@@ -66,43 +66,43 @@
                 <div class="col-xs-10">
 
                     <div class="form-group">
-                        <input type="checkbox" name="disableAllOnEmail" {% if (app.user.userSettings.disableAllOnEmail) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="disableAllOnEmail" {% if (app.user.userSettings.disableAllOnEmail) %}checked{% endif %}>
                         Disable all notifications on email
                     </div>
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgEmailMessageOffice" {% if (app.user.userSettings.msgEmailMessageOffice) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgEmailMessageOffice" {% if (app.user.userSettings.msgEmailMessageOffice) %}checked{% endif %}>
                         New message in office
                     </div>
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgEmailMessageProject" {% if (app.user.userSettings.msgEmailMessageProject) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgEmailMessageProject" {% if (app.user.userSettings.msgEmailMessageProject) %}checked{% endif %}>
                         New message in project
                     </div>
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgEmailMessageEpicStory" {% if (app.user.userSettings.msgEmailMessageEpicStory) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgEmailMessageEpicStory" {% if (app.user.userSettings.msgEmailMessageEpicStory) %}checked{% endif %}>
                         New message in epic story
                     </div>
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgEmailMessageTask" {% if (app.user.userSettings.msgEmailMessageTask) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgEmailMessageTask" {% if (app.user.userSettings.msgEmailMessageTask) %}checked{% endif %}>
                         New message in task
                     </div>
 
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgEmailTaskAdded" {% if (app.user.userSettings.msgEmailTaskAdded) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgEmailTaskAdded" {% if (app.user.userSettings.msgEmailTaskAdded) %}checked{% endif %}>
                         Task added
                     </div>
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgEmailEpicStoryAdded" {% if (app.user.userSettings.msgEmailEpicStoryAdded) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgEmailEpicStoryAdded" {% if (app.user.userSettings.msgEmailEpicStoryAdded) %}checked{% endif %}>
                         Epic story added
                     </div>
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgEmailTaskDeleted" {% if (app.user.userSettings.msgEmailTaskDeleted) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgEmailTaskDeleted" {% if (app.user.userSettings.msgEmailTaskDeleted) %}checked{% endif %}>
                         Task deleted
                     </div>
 
@@ -135,49 +135,49 @@
                 <div class="col-xs-10">
 
                     <div class="form-group">
-                        <input type="checkbox" name="disableAllOnSite" {% if (app.user.userSettings.disableAllOnSite) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="disableAllOnSite" {% if (app.user.userSettings.disableAllOnSite) %}checked{% endif %}>
                         Disable all notifications on site
                     </div>
 
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgSiteMessageOffice" {% if (app.user.userSettings.msgSiteMessageOffice) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgSiteMessageOffice" {% if (app.user.userSettings.msgSiteMessageOffice) %}checked{% endif %}>
                         Notify about new message in office
                     </div>
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgSiteMessageProject" {% if (app.user.userSettings.msgSiteMessageProject) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgSiteMessageProject" {% if (app.user.userSettings.msgSiteMessageProject) %}checked{% endif %}>
                         Notify about new message in project
                     </div>
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgSiteMessageEpicStory" {% if (app.user.userSettings.msgSiteMessageEpicStory) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgSiteMessageEpicStory" {% if (app.user.userSettings.msgSiteMessageEpicStory) %}checked{% endif %}>
                         Notify about new message in epic story
                     </div>
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgSiteMessageTask" {% if (app.user.userSettings.msgSiteMessageTask) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgSiteMessageTask" {% if (app.user.userSettings.msgSiteMessageTask) %}checked{% endif %}>
                         Notify about new message in task
                     </div>
 
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgSiteTaskAdded" {% if (app.user.userSettings.msgSiteTaskAdded) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgSiteTaskAdded" {% if (app.user.userSettings.msgSiteTaskAdded) %}checked{% endif %}>
                         Notify about task added
                     </div>
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgSiteEpicStoryAdded" {% if (app.user.userSettings.msgSiteEpicStoryAdded) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgSiteEpicStoryAdded" {% if (app.user.userSettings.msgSiteEpicStoryAdded) %}checked{% endif %}>
                         Notify about epic story added
                     </div>
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgSiteTaskDeleted" {% if (app.user.userSettings.msgSiteTaskDeleted) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgSiteTaskDeleted" {% if (app.user.userSettings.msgSiteTaskDeleted) %}checked{% endif %}>
                         Notify about task deleted
                     </div>
 
                     <div class="form-group">
-                        <input type="checkbox" name="msgSiteEpicStoryDeleted" {% if (app.user.userSettings.msgSiteEpicStoryDeleted) %}{{'checked'}}{% endif %}>
+                        <input type="checkbox" name="msgSiteEpicStoryDeleted" {% if (app.user.userSettings.msgSiteEpicStoryDeleted) %}checked{% endif %}>
                         Notify about epic story deleted
                     </div>
 
