--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -364,7 +364,7 @@
 
         <!-- Begin of Task Nav Tabs -->
         <ul id="myTab" class="nav nav-tabs" role="tablist">
-            <li data-toggle="tooltip" data-placement="top" title="Table view" role="presentation" class="active">
+            <li data-toggle="tooltip" data-placement="top" title="Logs" role="presentation" class="active">
                 <a data-toggle="tab" id="task-logs-tab" class="btn" href="#task-logs" aria-controls="task-logs" role="tab" aria-expanded="true">
                     Logs
                 </a>
