--- a/src/ZectranetBundle/Resources/views/projectSettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/projectSettings.html.twig
@@ -4,66 +4,136 @@
 
 {% block body %}
     <div ng-controller="ProjectController" ng-init="getMembers()">
-        <div class="page-header">
-            <h4><i class="fa fa-users"></i> Users Managment</h4>
-        </div>
 
-        <div class="row">
-            <div class="col-md-offset-1 col-md-4" cg-busy="membersPromise">
-                <div class="list-group">
-                    <div class="list-group-item active">
-                        <i class="fa fa-users"></i>
-                        Users Without Office
+        <ul id="myTab" class="nav nav-tabs" role="tablist">
+            <li role="presentation" class="active">
+                <a data-toggle="tab" id="users-manage-tab" class="btn" href="#users-manage" role="tab" aria-expanded="true">
+                    Project Users Manage
+                </a>
+            </li>
+            <li data-toggle="tooltip" data-placement="top" title="Table view" role="presentation">
+                <a data-toggle="tab" id="offices-manage-tab" class="btn" href="#offices-manage" role="tab" aria-expanded="false">
+                    Project Offices Manage
+                </a>
+            </li>
+        </ul>
+
+        <div id="tasks-tab-content" class="tab-content">
+
+            <!-- Begin of Users Manage Panel -->
+            <div id="users-manage" class="tab-pane fade in active" aria-labelledby="users-manage-tab" role="tabpanel">
+                <div class="col-md-6">
+                    <div class="page-header">
+                        <h4><i class="fa fa-users"></i> Users Managment</h4>
                     </div>
-                    <div class="list-group-item" style="height: 250px; max-height: 250px; overflow-y: auto;" ng-cloak>
-                        <a style="cursor: pointer;" class="list-group-item" ng-repeat="user in users" ng-init="user.selected = false; user.index = $index"
-                           ng-class="{ 'active': user.selected }" ng-click="user.selected = !user.selected">
-                            <i class="fa fa-user"></i>
-                            [[user.name + ' ' + user.surname + ' (' + user.username + ')' ]]
-                        </a>
-                    </div>
-                    <div class="form-group">
-                        <button type="button" ng-click="addUsersToProject()" class="form-control btn btn-default btn-success">
-                            <i class="fa fa-plus-circle"></i>
-                            Add Users To Project
-                        </button>
+
+                    <div class="row">
+                        <div class="col-md-6" cg-busy="membersPromise">
+                            <div class="list-group">
+                                <div class="list-group-item active">
+                                    <i class="fa fa-users"></i>
+                                    Users Without Office
+                                </div>
+                                <div class="list-group-item" style="height: 250px; max-height: 250px; overflow-y: auto;" ng-cloak>
+                                    <a style="cursor: pointer;" class="list-group-item" ng-repeat="user in users" ng-init="user.selected = false; user.index = $index"
+                                       ng-class="{ 'active': user.selected }" ng-click="user.selected = !user.selected">
+                                        <i class="fa fa-user"></i>
+                                        [[user.name + ' ' + user.surname + ' (' + user.username + ')' ]]
+                                    </a>
+                                </div>
+                                <div class="form-group">
+                                    <button type="button" ng-click="addUsersToProject()" class="form-control btn btn-default btn-success">
+                                        <i class="fa fa-plus-circle"></i>
+                                        Add Users To Project
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6" cg-busy="membersPromise">
+                            <div class="list-group">
+                                <div class="list-group-item active">
+                                    <i class="fa fa-users"></i>
+                                    Project Members
+                                </div>
+                                <div class="list-group-item" style="height: 250px; max-height: 250px; overflow-y: auto;" ng-cloak>
+                                    <a style="cursor: pointer;" class="list-group-item" ng-repeat="user in projectMembers" ng-init="user.selected = false; user.index = $index"
+                                       ng-class="{ 'active': user.selected }" ng-click="user.selected = !user.selected">
+                                        <i class="fa fa-user"></i>
+                                        [[user.name + ' ' + user.surname + ' (' + user.username + ')' ]]
+                                    </a>
+                                </div>
+                                <div class="form-group">
+                                    <button type="button" class="form-control btn btn-default btn-danger" ng-click="removeUsersFromProject()">
+                                        <i class="fa fa-trash"></i>
+                                        Delete Users From Project
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- End of Users Manage Panel -->
 
-            <div class="col-md-offset-1 col-md-4" cg-busy="membersPromise">
-                <div class="list-group">
-                    <div class="list-group-item active">
-                        <i class="fa fa-users"></i>
-                        Project Members
+
+            <!-- Begin of Offices Manage Panel -->
+            <div id="offices-manage" class="tab-pane fade" aria-labelledby="offices-manage-tab" role="tabpanel">
+                <div class="col-md-6">
+                    <div class="page-header">
+                        <h4><i class="fa fa-users"></i> Offices Managment</h4>
                     </div>
-                    <div class="list-group-item" style="height: 250px; max-height: 250px; overflow-y: auto;" ng-cloak>
-                        <a style="cursor: pointer;" class="list-group-item" ng-repeat="user in projectMembers" ng-init="user.selected = false; user.index = $index"
-                           ng-class="{ 'active': user.selected }" ng-click="user.selected = !user.selected">
-                            <i class="fa fa-user"></i>
-                            [[user.name + ' ' + user.surname + ' (' + user.username + ')' ]]
-                        </a>
-                    </div>
-                    <div class="form-group">
-                        <button type="button" class="form-control btn btn-default btn-danger" ng-click="removeUsersFromProject()">
-                            <i class="fa fa-trash"></i>
-                            Delete Users From Project
-                        </button>
+
+                    <div class="row">
+                        <div class="col-md-6" cg-busy="membersPromise">
+                            <div class="list-group">
+                                <div class="list-group-item active">
+                                    <i class="fa fa-users"></i>
+                                    Offices
+                                </div>
+                                <div class="list-group-item" style="height: 250px; max-height: 250px; overflow-y: auto;" ng-cloak>
+                                    <a style="cursor: pointer;" class="list-group-item" ng-repeat="user in users" ng-init="user.selected = false; user.index = $index"
+                                       ng-class="{ 'active': user.selected }" ng-click="user.selected = !user.selected">
+                                        <i class="fa fa-user"></i>
+                                        [[user.name + ' ' + user.surname + ' (' + user.username + ')' ]]
+                                    </a>
+                                </div>
+                                <div class="form-group">
+                                    <button type="button" ng-click="addUsersToProject()" class="form-control btn btn-default btn-success">
+                                        <i class="fa fa-plus-circle"></i>
+                                        Add Users To Project
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6" cg-busy="membersPromise">
+                            <div class="list-group">
+                                <div class="list-group-item active">
+                                    <i class="fa fa-users"></i>
+                                    Project Members
+                                </div>
+                                <div class="list-group-item" style="height: 250px; max-height: 250px; overflow-y: auto;" ng-cloak>
+                                    <a style="cursor: pointer;" class="list-group-item" ng-repeat="user in projectMembers" ng-init="user.selected = false; user.index = $index"
+                                       ng-class="{ 'active': user.selected }" ng-click="user.selected = !user.selected">
+                                        <i class="fa fa-user"></i>
+                                        [[user.name + ' ' + user.surname + ' (' + user.username + ')' ]]
+                                    </a>
+                                </div>
+                                <div class="form-group">
+                                    <button type="button" class="form-control btn btn-default btn-danger" ng-click="removeUsersFromProject()">
+                                        <i class="fa fa-trash"></i>
+                                        Delete Users From Project
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- End of Offices Manage Panel -->
         </div>
 
-        <div class="row" style="margin-top: 10px;">
-            <div class="col-md-offset-1 col-md-9">
-                <div class="form-group">
-                    <button class="form-control btn btn-default btn-primary" ng-click="saveMembersState()">
-                        <i class="fa fa-check-circle"></i>
-                        Save Changes
-                    </button>
-                </div>
-            </div>
-        </div>
     </div>
 {% endblock %}
 
